<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_base"
    tools:context=".MainActivity">

    <!-- TextView hiển thị lời nhắc -->
    <TextView
        android:id="@+id/tv_request_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/these_people_want_to_know_if_u_are_ok" />

    <!-- Textbox nhập số điện thoại -->
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_request_list"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:textSize="@dimen/text_medium" />

    <!-- ListView hiển thị danh sách tin nhắn -->
    <ListView
        android:id="@+id/lv_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone_number"
        android:layout_above="@id/ll_control" />

    <!-- Khu vực điều khiển -->
    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_base">

        <!-- Nút phản hồi -->
        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_safe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_am_safe_and_well" />

            <Button
                android:id="@+id/btn_mayday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mayday" />
        </LinearLayout>

        <!-- Tùy chọn Auto Response -->
        <LinearLayout
            android:layout_marginTop="@dimen/margin_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_response"
                android:textSize="@dimen/text_medium" />

            <Switch
                android:id="@+id/sw_auto_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
